--- a/state/templates/state/set_mandate.html
+++ b/state/templates/state/set_mandate.html
@@ -31,7 +31,7 @@ jQuery(document).ready(function ($) {
 <div id="over" class="tabcontent">
     <form id="candidates_form" role="form">
         <div class="row" align="center">
-            <b><font size="4">Выдата мандата:</font></b>
+            <b><font size="4">Выдача мандата:</font></b>
         </div>
         <div class="row" align="center">
             <!--если у партии есть аватарка-->
