--- a/player/templates/player/view_profile.html
+++ b/player/templates/player/view_profile.html
@@ -14,7 +14,7 @@
             <div class="col-xs-1 col-sm-1 col-md-1" align="center"></div>
             <div class="col-xs-4 col-sm-4 col-md-4" align="center">
                 <!--Картинка профиля-->
-                <img id="plr_image_link" src="{% if char.image %}{{ char.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250" {% if char.party %}style="background-image: url({{ char.party.members_image.url }}); background-size: cover;"{% endif %}>
+                <img id="plr_image_link" src="{% if char.image %}{{ char.image.url }}{% else %}{% static 'img/nopic.png' %}{% endif %}" width="250" height="250" {% if char.party %}{% if char.party.members_image %}style="background-image: url({{ char.party.members_image.url }}); background-size: cover;"{% endif %}{% endif %}>
             </div>
             <!--колонка характеристик персонажа-->
             <div class="col-xs-6 col-sm-6 col-md-6">
