--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load dict_key %}
-<div id="parliament" class="tab-pane fade in active">
+<div id="parliament" class="tab-pane fade">
     <div class="progress" align="right">
         {% if parties %}
         {% for parl_party in parties %}
