--- a/state/templates/state/gov/reviewed/explore_resources.html
+++ b/state/templates/state/gov/reviewed/explore_resources.html
@@ -30,7 +30,7 @@
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
         <div class="row">
-            {{ bill.cash_cost }} {{ bill.get_resource_display }}
+            {{ bill.exp_value }} {{ bill.get_resource_display }}
         </div>
         <div class="row">
             <b style="color: #85bb65">${{ bill.cash_cost }}</b>
